--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,13 @@
     "allowJs": true,
     "outDir": "build",                          
     "rootDir": "src",
-    "strict": true,         
+    "strict": false,         
     "noImplicitAny": true,
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/@types"
+    ]
   }
 }
